test/corpus/basic.txt
==================
Simple let statement
==================

let x = 1

---

(source_file
  (let_expr
    name: (identifier)
    value: (number)))

==================
Simple var statement
==================

var x = 1

---

(source_file
  (var_expr
    name: (identifier)
    value: (number)))

==================
Function definition
==================

def greet(name):
  let message = "Hello"
  | message
end

---

(source_file
  (def_expr
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)))
    (let_expr
      name: (identifier)
      value: (pipe
        (string)
        (identifier)))))

==================
Lambda function
==================

fn(x): x;

---

(source_file
  (function_expr
    parameters: (parameter_list
      (parameter
        name: (identifier)))
    body: (identifier)))

==================
Arrow function
==================

->(x): x;

---

(source_file
  (function_expr
    parameters: (parameter_list
      (parameter
        name: (identifier)))
    body: (identifier)))

==================
Function call
==================

add(1, 2)

---

(source_file
  (call_expr
    function: (identifier)
    arguments: (argument_list
      (number)
      (number))))

==================
Function call with pipe argument
==================

f(a | upcase, b | downcase)

---

(source_file
  (call_expr
    function: (identifier)
    arguments: (argument_list
      (pipe
        (identifier)
        (identifier))
      (pipe
        (identifier)
        (identifier)))))

==================
Foreach loop
==================

foreach (x, array(1, 2, 3)):
  add(x, 1);

---

(source_file
  (foreach_expr
    variable: (identifier)
    iterable: (call_expr
      function: (identifier)
      arguments: (argument_list
        (number)
        (number)
        (number)))
    (call_expr
      function: (identifier)
      arguments: (argument_list
        (identifier)
        (number)))))

==================
If statement
==================

if (x > 0): x

---

(source_file
  (if_expr
    condition: (group_expr
      (binary_expr
        (identifier)
        (number)))
    body: (identifier)))

==================
Binary expressions
==================

1 + 2 * 3

---

(source_file
  (binary_expr
    (number)
    (binary_expr
      (number)
      (number))))

==================
Pipe expression
==================

x | add(1)

---

(source_file
  (pipe
    (identifier)
    (call_expr
      function: (identifier)
      arguments: (argument_list (number)))))

==================
Array literal
==================

[1, 2, 3]

---

(source_file
  (array
    (number)
    (number)
    (number)))

==================
Dict literal
==================

{name: "test", value: 42}

---

(source_file
  (dict
    (dict_entry
      key: (identifier)
      value: (string))
    (dict_entry
      key: (identifier)
      value: (number))))

==================
Comment
==================

# This is a comment
let x = 1

---

(source_file
  (comment)
  (let_expr
    name: (identifier)
    value: (number)))


==================
Until expression
==================

until (x >= 5):
  x = x + 1
end

---

(source_file
  (until_expr
    condition: (group_expr
      (binary_expr
        (identifier)
        (number)))
    (assignment_expr
      (identifier)
      (binary_expr
        (identifier)
        (number)))))

==================
Unless expression
==================

unless (x == 1):
  "not one"

---

(source_file
  (unless_expr
    condition: (group_expr
      (binary_expr
        (identifier)
        (number)))
    body: (string)))

==================
Simple assignment
==================

.x = 1

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (number)))

==================
Update operator
==================

.x |= add(1)

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (call_expr
      function: (identifier)
      arguments: (argument_list
        (number)))))

==================
Addition assignment
==================

.x += 1

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (number)))

==================
Subtraction assignment
==================

.x -= 1

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (number)))

==================
Multiplication assignment
==================

.x *= 2

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (number)))

==================
Division assignment
==================

.x /= 2

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (number)))

==================
Modulo assignment
==================

.x %= 3

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (number)))

==================
Floor division assignment
==================

.x //= 2

---

(source_file
  (assignment_expr
    (selector_expr
      property: (identifier))
    (number)))

==================
Shift left
==================

x << 2

---

(source_file
  (binary_expr
    (identifier)
    (number)))

==================
Shift Right
==================

x >> 2

---

(source_file
  (binary_expr
    (identifier)
    (number)))

==================
Convert
==================

x @ :uri

---

(source_file
  (binary_expr
    (identifier)
    (symbol)))


==================
Or pattern - literals
==================

match x:
| 1 || 2: "one or two"
| _: "other"
end

---

(source_file
  (match_expr
    value: (identifier)
    (match_arm
      pattern: (pattern
        (or_pattern
          (literal_pattern (number))
          (literal_pattern (number))))
      body: (string))
    (match_arm
      pattern: (pattern (wildcard_pattern))
      body: (string))))

==================
Or pattern - types
==================

match x:
| :string || :number: "string or number"
| _: "other"
end

---

(source_file
  (match_expr
    value: (identifier)
    (match_arm
      pattern: (pattern
        (or_pattern
          (type_pattern)
          (type_pattern)))
      body: (string))
    (match_arm
      pattern: (pattern (wildcard_pattern))
      body: (string))))

==================
Try/catch expression
==================

try: risky() catch: "fallback"

---

(source_file
  (try_expr
    body: (call_expr
      function: (identifier)
      arguments: (argument_list))
    handler: (string)))

==================
Try/catch expression with error binder
==================

try: risky() catch(e): e

---

(source_file
  (try_expr
    body: (call_expr
      function: (identifier)
      arguments: (argument_list))
    binder: (identifier)
    handler: (identifier)))
